2014-01-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (rising_product): New static function.
	(n_choose_k, n_perm_k): New functions.

	* arith.h (n_choose_k, n_perm_k): Declared.

	* eval.c (eval_init): New functions interned.

	* txr.1: Documented.

2014-01-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (to_float): Print function name as ~a rather than ~s,
	so it doesn't have quotes around it.
	(cum_norm_dist): New function.

	* arith.h (cum_norm_dist): Declared.

	* eval.c: Include arith.h.
	(eval_init): Register cum_norm_dist as intrinsic.

	* txr.1: Documented cum-norm-dist.

2014-01-10  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Detect platforms which don't reveal declarations
	in C headers which are extensions to standard C, like popen or fileno,
	in response to standard feature selection macros like -D_POSIX_SOURCE.
	MinGW and Cygwin are offenders.  These platforms hide the declarations
	when gcc is in -ansi mode, by testing for __STRICT_ANSI__. Turns out,
	however, that -U__STRICT_ANSI__ on the gcc command line strips this
	away, causing the declarations to be revealed.

	* lib.c, parser.l, stream.c, utf8.c: Removed the declarations which
	compensated for the above problem. Yippee!  Fuck you, stupid Cygwin
	troglodytes, and the MinGW horse you rode in on.
	http://cygwin.com/ml/cygwin/2011-10/msg00131.html

2014-01-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Renaming lisp-parse to read; lisp-parse
	is retained as an obsolescent synonym. All arguments become optional.

	* parser.l (lisp_parse): Handle nil source.

	* txr.1: Updated.

014-01-10  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (do_txeval): Lift an annoying restriction in the pattern
	language's expression evaluator. Whereas TXR Lisp expressions can be
	used int the pattern language, preceded by @, it was not possible
	to evaluate TXR Lisp variables this way. So instead of @var,
	some clumsy trick had to be used like @(identity var). This is not